--- a/media.html
+++ b/media.html
@@ -35,7 +35,7 @@
             <a class="toggle close" href="#">×</a>
             <ul>
 
-                <a href="#">Home</a>
+                <a href="index.html">Home</a>
                 </li>
                 <li class="">
                     <a href="fibonacci.html">Fibonacci</a>
